@@ -64,6 +64,9 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	Tests: Shader tests center the fragment shader effects on Mac
 	Director: On Mac, CC_DIRECTOR_INIT() centers the main window
 
+* TonicBom:
+	TileMap: TMX obtains poligon and polilines properties
+	
 * Viktor Lidholt (http://www.cocosbuilder.com)
 	Added setters/getters for fontName, fontSize, fntFile in LabelBMFont and LabelTTF
 	
